--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "^4.0.2",
+    "@astrojs/mdx": "^4.2.0",
+    "@astrojs/react": "^4.2.1",
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.2",
     "astro": "^5.1.0",
+    "lucide-react": "^0.482.0",
+    "react": "^19.0.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
+    "@types/react": "^19.0.10",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-astro-organize-imports": "^0.4.11",
